# tcl-fcgi

./: .gitignore  HISTORY  INSTALL  LICENSE.TERMS  Makefile  Makefile.in  NOTES  README  README.md  configure  configure.in  mod_apache1.2.5.pat
.github/workflows/: ci.yml  prepare.ps1  prepare.sh  test.ps1  test.sh
c-src/: driver.tcl.in  fcgiinit.sed  pkgIndex.tcl.in  tclFcgiCmd.c.in
c-src/shared/: README.shared
doc/: Makefile  fcgi.tcl.html  fcgi.tcl.man  fcgi.tcl.ps  fcgi.tcl.txt
example/: README  README.md  configure  configure.in  echo-cgi.tcl  echo-tcl.tcl  vclock.tcl
example/src/: echo-cgi.fcg.in  echo-tcl.fcg.in  vclock.fcg.in
tcl-src/: fcgi-helpers.tcl  fcgi.tcl  fcgi.tcl.in  pkgIndex.tcl  pkgIndex.tcl.in
tests/: README.md  fcgi-nginx.test  nginx.conf  nginx.conf.template  test.sh
