# should have run './configure' and 'make' in the directory above this one

AC_INIT(configure)

for f in src/*.in 
do
  sourcefiles="$sourcefiles src/`basename $f .in`"
done


if test -z "$prefix" -o "$prefix" = "NONE" ; then
    prefix=/usr/local
fi

if test -z "$exec_prefix" -o "$exec_prefix" = "NONE" ; then
    exec_prefix=$prefix
fi

# if we don't get a good fcgi_tcl_executable, we're hosed

FCGI_TCL_EXECUTABLE=""
AC_ARG_WITH(fcgi_tcl_executable, [ --with-fcgi_tcl_executable=PATH], FCGI_TCL_EXECUTABLE=$withval)

if test -z "$FCGI_TCL_EXECUTABLE" ; then
  AC_ERROR(did not get --with-fcgi_tcl_executable=)
fi

AC_SUBST(FCGI_TCL_EXECUTABLE)
AC_OUTPUT($sourcefiles)

eval cp $sourcefiles .
chmod +x $sourcefiles

